# CFP2-blg

./: .gitignore  README.en.md  README.hant.md  README.md  act1-convert.py  act2-merge.py  act2-update.py  act3-annotate.py  act3-exportJS.py  act3-merge.py  act4-annotate.py  act4-exportJS.py  act5-export.py  act5-exportJS.py  alias.toml  annotation.toml  config.toml  filter.txt  history.toml  keyword.toml  md2json.py  pyproject.toml  requirements.txt  secret.py  structure.toml
.github/actions/pages/: action.yaml
.github/workflows/: pages.yml  update.yaml
data/: ApplePodcast.html  ApplePodcast.json  ApplePodcast.md  ApplePodcast.toml  ApplePodcastRequests.html  GooglePodcast.html  GooglePodcast.json  GooglePodcast.md  GooglePodcast.toml  GooglePodcastRequests.html  SpotifyPodcast.html  SpotifyPodcast.json  SpotifyPodcast.md  SpotifyPodcast.toml  SpotifyPodcastRequests.html  YouTube.toml  feedPodcast.toml  feedPodcast.xml  filesize.txt  image.toml
docs/: CNAME  app.webmanifest  blg.css  blg.js  font.css  google.css  icon.css  index.html  main.css  main.js  main.webmanifest  player.js  playlist.js  register.js  style.css  worker.js
docs/f/: noto-LICENSE  noto-emoji-v26-emoji-regular.eot
mid/: annotation.toml  history.toml  list_lack_youtube.txt  list_youtube_only.txt  structure.toml  youtube_extra.toml
