[tool.poetry]
name = "podcast-selector-blg"
version = "0.1.0"
description = ""
authors = ["djtratoh"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
tomlkit = "^0.11.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
